[package]
name = "meter"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive", "env"] }
csv = "1.4.0"
dirs = "6.0.0"
itertools = "0.14.0"
jiff = "0.2.16"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
spinoff = "0.8.0"
twox-hash = "2.1.2"
ureq = { version = "3.1.4", features = ["json"]}
